feat: working on pygem in order to generate the migrations file, tests working so app is able now to gather the information from the db and create all the entity models

--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,14 @@ build/
 .eggs/
 *.egg
 
+
+# dev // archivos que estan en para mi entorno de desarrollo
+# pygem/
+
+# 
+log.md  
+
+
 # Archivos de caché de pip
 pip-cache/
 
