--- a/.env
+++ b/.env
@@ -5,3 +5,9 @@ DB_USER = "postgres"
 DB_PASSWORD = "062117"
 DB_PORT = 5432
 SECRET_JWT_KEY = "no hay camino caminante, su camino se hace al andar"
+TEST_DB_USER="postgres"
+TEST_DB_HOST="localhost"
+TEST_DB_DATABASE= "test_library"
+TEST_DB_PASSWORD="062117"
+TEST_DB_PORT=5432
+
