--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 PORT = 3000
-DB_DATABASE = "dev_library"
-DB_HOST = "localhost"
-DB_USER = "postgres"
-DB_PASSWORD = "062117"
-DB_PORT = 5432
+DB_USER=postgres
+DB_PASSWORD=062117
+DB_NAME=dev_library
+DB_HOST=localhost
+DB_PORT=5432
 SECRET_JWT_KEY = "no hay camino caminante, su camino se hace al andar"
 TEST_DB_USER="postgres"
 TEST_DB_HOST="localhost"
